# testcpack

./: CMakeLists.txt
cmake/: Packaging.cmake
src/: main.cpp
